--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "license": "AGPL-3.0-or-later",
   "scripts": {
     "start": "node app.js",
-    "sass": "sass ./src/css/app.scss:./src/css/app.css"
+    "sass": "sass ./src/css/app.scss:./src/css/app.css",
+    "minify": "node minify.js"
   },
   "dependencies": {
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "feedparser-promised": "^2.0.1",
     "http": "^0.0.0",
+    "https": "^1.0.0",
     "ip": "^1.1.5",
     "multer": "^1.4.1",
     "opusscript": "^0.0.6",
