--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ytdl-core": "^0.29.2"
   },
   "devDependencies": {
-    "scss": "^0.2.4",
-    "minify": "^5.0.0"
+    "minify": "^5.0.0",
+    "scss": "^0.2.4"
   }
 }
