--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node app.js",
     "sass": "sass ./src/css/app.scss:./src/css/app.css",
-    "minify": "node minify.js"
+    "minify-home": "node minify_home.js",
+    "minify-chat": "node minify_chat.js"
   },
   "dependencies": {
     "ejs": "^2.6.2",
