--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "minify": "node minify_home.js && node minify_chat.js"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "feedparser-promised": "^2.0.1",
     "http": "^0.0.0",
     "ip": "^1.1.5",
+    "jquery": "^3.4.1",
     "multer": "^1.4.1",
+    "natural": "^0.6.3",
     "opusscript": "^0.0.6",
     "request": "^2.88.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "ytdl-core": "^1.0.6",
-    "natural": "^0.6.3"
+    "ytdl-core": "^1.0.7"
   },
   "devDependencies": {
     "minify": "^5.0.0",
