--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "app.js",
   "author": "Maxime Vanderwegen",
   "license": "AGPL-3.0-or-later",
+  "browserslist": "last 4 versions",
   "scripts": {
     "start": "node app.js",
     "sass": "sass ./src/scss/home/app.scss:./src/scss/home/app.css --style compressed && sass ./src/scss/chat/chat.scss:./src/scss/chat/chat.css --style compressed",
-    "minify": "node minify_home.js && node minify_chat.js"
+    "minify": "node minify_home.js && node minify_chat.js",
+    "prefix": "postcss ./src/scss/404.css --use autoprefixer -d ./src/scss/prefixed && postcss ./src/scss/home/app.css --use autoprefixer -d ./src/scss/prefixed && postcss ./src/scss/chat/chat.css --use autoprefixer -d ./src/scss/prefixed"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
@@ -26,7 +28,10 @@
     "ytdl-core": "^1.0.7"
   },
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
     "minify": "^5.0.0",
+    "postcss": "^7.0.26",
+    "postcss-cli": "^7.1.0",
     "scss": "^0.2.4"
   }
 }
