--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "feedparser-promised": "^2.0.1",
     "http": "^0.0.0",
     "ip": "^1.1.5",
-    "jquery": "^3.4.1",
     "multer": "^1.4.1",
     "natural": "^0.6.3",
     "opusscript": "^0.0.6",
+    "puppeteer": "^2.1.0",
     "request": "^2.88.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
