--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "ejs": "^2.6.2",
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "feedparser-promised": "^2.0.1",
-    "http": "^0.0.0",
+    "http": "^0.0.1-security",
     "ip": "^1.1.5",
     "multer": "^1.4.1",
     "natural": "^0.6.3",
-    "opusscript": "^0.0.6",
-    "puppeteer": "^2.1.0",
-    "request": "^2.88.0",
+    "opusscript": "^0.0.7",
+    "puppeteer": "^2.1.1",
+    "request": "^2.88.2",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "ytdl-core": "^1.0.7"
+    "ytdl-core": "^2.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^9.7.4",
-    "minify": "^5.0.0",
-    "postcss": "^7.0.26",
+    "autoprefixer": "^9.7.5",
+    "minify": "^5.1.1",
+    "postcss": "^7.0.27",
     "postcss-cli": "^7.1.0",
     "scss": "^0.2.4"
   }
