--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "adm-zip": "^0.4.16",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
+    "compression": "^1.7.4",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "feedparser-promised": "^2.0.1",
