--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "browserslist": "last 4 versions",
   "scripts": {
     "start": "node app.js",
-    "sass": "sass ./src/scss/home/app.scss:./src/scss/home/app.css --style compressed && sass ./src/scss/chat/chat.scss:./src/scss/chat/chat.css --style compressed",
+    "sass": "sass ./src/scss/index.scss:./src/scss/app.css --style compressed",
     "minify": "node minify.js",
-    "prefix": "postcss ./src/scss/404.css --use autoprefixer -d ./src/scss/prefixed && postcss ./src/scss/home/app.css --use autoprefixer -d ./src/scss/prefixed && postcss ./src/scss/chat/chat.css --use autoprefixer -d ./src/scss/prefixed"
+    "prefix": "postcss ./src/scss/404.css --use autoprefixer -d ./src/scss/prefixed && postcss ./src/scss/app.css --use autoprefixer -d ./src/scss/prefixed"
   },
   "dependencies": {
     "adm-zip": "^0.4.16",
