--- a/package.json
+++ b/package.json
@@ -1,40 +1,27 @@
 {
-  "name": "BadassBoard",
-  "version": "0.4.4",
-  "main": "app.js",
-  "author": "Maxime Vanderwegen",
-  "license": "AGPL-3.0-or-later",
-  "browserslist": "last 4 versions",
+  "name": "badassboard",
+  "version": "0.0.0",
   "scripts": {
-    "start": "node app.js",
-    "sass": "sass ./client/scss/index.scss:./client/scss/app.css --style compressed",
-    "minify": "node minify.js",
-    "prefix": "postcss ./client/scss/404.css --use autoprefixer -d ./client/scss/prefixed && postcss ./client/scss/app.css --use autoprefixer -d ./client/scss/prefixed"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "adm-zip": "^0.5.2",
-    "axios": "^0.21.1",
-    "cheerio": "^1.0.0-rc.3",
+    "axios": "^0.27.2",
     "compression": "^1.7.4",
-    "ejs": "^3.0.2",
-    "express": "^4.17.1",
-    "feedparser-promised": "^2.0.1",
-    "http": "^0.0.1-security",
-    "ip": "^1.1.5",
-    "lodash": "^4.17.19",
-    "natural": "^3.0.0",
-    "opusscript": "^0.0.7",
-    "puppeteer": "^7.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "fs-extra": "^10.1.0",
+    "ip": "^1.1.8",
+    "natural": "^5.2.3",
     "rotten-parser": "^0.2.0",
-    "socket.io": "^3.1.0",
-    "socket.io-client": "^3.1.0",
-    "ytdl-core": "^4.0.2"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.5",
+    "vuex": "^4.0.2",
+    "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.4",
-    "minify": "^7.0.0",
-    "postcss": "^8.2.4",
-    "postcss-cli": "^8.3.1",
-    "scss": "^0.2.4"
+    "@vitejs/plugin-vue": "^3.1.0",
+    "vite": "^3.1.0"
   }
 }
