--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "feedparser-promised": "^2.0.1",
     "fs-extra": "^10.1.0",
     "ip": "^1.1.8",
     "natural": "^5.2.3",
