Minor style improvements :lipstick:

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "ip": "^1.1.8",
     "natural": "^5.2.3",
     "rotten-parser": "^0.2.0",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2",
