--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "fs-extra": "^10.1.0",
     "ip": "^1.1.8",
     "natural": "^5.2.3",
+    "pinia": "^2.1.7",
     "rotten-parser": "^0.2.0",
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
-    "vuex": "^4.0.2",
     "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
