--- a/package.json
+++ b/package.json
@@ -7,24 +7,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.7.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
+    "express": "^4.19.2",
     "feedparser-promised": "^2.0.1",
-    "fs-extra": "^10.1.0",
-    "ip": "^1.1.8",
-    "natural": "^5.2.3",
+    "fs-extra": "^11.2.0",
+    "ip": "^2.0.1",
     "pinia": "^2.1.7",
-    "rotten-parser": "^0.2.0",
-    "sass": "^1.55.0",
-    "sass-loader": "^13.0.2",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.5",
-    "ytdl-core": "^4.11.2"
+    "punycode.js": "^2.3.1",
+    "sass": "^1.77.4",
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.1.0",
-    "vite": "^3.1.0"
+    "@vitejs/plugin-vue": "^5.0.5",
+    "vite": "^5.2.12",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
