--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
     "axios": "^1.7.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "feedparser-promised": "^2.0.1",
     "fs-extra": "^11.2.0",
     "ip": "^2.0.1",
     "pinia": "^2.1.7",
-    "punycode.js": "^2.3.1",
     "sass": "^1.77.4",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2",
-    "ytdl-core": "^4.11.5"
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
